--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Softcore</title>
+    <title>Web 1 Website</title>
 </head>
 <body>
-    
+<h1>Web 1 Website</h1>
 </body>
 </html>
