--- a/index.html
+++ b/index.html
@@ -3,9 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web 1 Website</title>
+
+
+<link rel="apple-touch-icon" sizes="180x180" href="/Favicon/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/Favicon/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/Favicon/favicon-16x16.png">
+<link rel="manifest" href="/Favicon/site.webmanifest">
+
+<title>Web 1 Website</title>
 </head>
 <body>
 <h1>Web 1 Website</h1>
+<img src="Assets/PUG.gif" alt"pug">
 </body>
 </html>
