--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <link rel="icon" type="image/png" sizes="16x16" href="/Favicon/favicon-16x16.png">
 <link rel="manifest" href="/Favicon/site.webmanifest">
 
+<link rel="stylesheet" href="styles.css">
+
 <title>Web 1 Website</title>
 </head>
 <body>
