--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 
 <link rel="stylesheet" href="styles.css">
 
-<script src="script.js"></script>
+<script src="script.js" defer></script>
 
-<title>Web 1 Website</title>
+<title>MY WEBSITE</title>
 </head>
 <body>
-<h1>Web 1 Website</h1>
+<h1>My WEBSITE</h1>
 <img src="Assets/PUG.gif" alt"pug">
 </body>
 </html>
